<resources>
    <string name="app_name">visahackyeah</string>
    <string name="payment_header_str">Potwierdź transakcję</string>
	<string name="payment_contractor_str">Odbiorca płatności</string>
	<string name="payment_title_str">Tytuł:</string>
	<string name="payment_value_str">Kwota płatności:</string>
	<string name="payment_date_str">Data:</string>
	<string name="payment_accept">Potwierdź</string>
	<string name="chanel_name">VisaHackYeah</string>
	<string name="channel_description">VisaHackYeah</string>
	<string name="pref_client_id">client_id</string>
	<string name="pref_backend_ip">backend_ip</string>
</resources>
