<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

	<data>
		<variable name="viewModel" type="com.asi.visahackyeah.ui.payment.PaymentViewModel" />
		<variable name="paymentModel" type="com.asi.visahackyeah.common.model.PaymentModel"/>
		<variable name="formattedValue" type="java.lang.String"/>
		<variable name="formattedDate" type="java.lang.String"/>
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/payment_header"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/payment_header_str"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="16dp"
			android:textSize="28sp"
			android:textAlignment="center"
			android:textStyle="bold"
			android:textColor="@android:color/black"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

		<androidx.cardview.widget.CardView
			android:id="@+id/payment_cardView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="32dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/payment_header"
			app:cardCornerRadius="8dp"
			app:cardElevation="4dp">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/payment_contractor"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginTop="8dp"
					android:text="@string/payment_contractor_str"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@android:color/black"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"/>

				<TextView
					android:id="@+id/payment_contractor_field"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:text="@{paymentModel.name}"
					app:layout_constraintTop_toBottomOf="@+id/payment_contractor"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"/>

				<TextView
					android:id="@+id/payment_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginTop="16dp"
					android:text="@string/payment_title_str"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@android:color/black"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/payment_contractor_field"/>

				<TextView
					android:id="@+id/payment_title_field"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:text="@{paymentModel.title}"
					app:layout_constraintTop_toBottomOf="@+id/payment_title"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"/>

				<TextView
					android:id="@+id/payment_date"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginTop="8dp"
					android:text="@string/payment_date_str"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@android:color/black"
					app:layout_constraintTop_toBottomOf="@+id/payment_title_field"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"/>

				<TextView
					android:id="@+id/payment_date_field"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:text="@{formattedDate}"
					app:layout_constraintTop_toBottomOf="@+id/payment_date"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"/>

				<TextView
					android:id="@+id/payment_value"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginTop="8dp"
					android:text="@string/payment_value_str"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@android:color/black"
					app:layout_constraintTop_toBottomOf="@+id/payment_date_field"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"/>

				<TextView
					android:id="@+id/payment_value_field"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="16dp"
					android:paddingBottom="8dp"
					android:text="@{formattedValue}"
					app:layout_constraintTop_toBottomOf="@+id/payment_value"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"/>

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.cardview.widget.CardView>

		<EditText
			android:id="@+id/payment_pass"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:layout_marginTop="16dp"
			android:inputType="numberPassword"

			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintEnd_toStartOf="@+id/guideline2"
			app:layout_constraintTop_toBottomOf="@+id/payment_cardView"/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/payment_accept_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="@string/payment_accept"
			android:textSize="18sp"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintEnd_toStartOf="@+id/guideline2"
			app:cornerRadius="16dp" android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/payment_pass"/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.2"
			android:orientation="vertical"/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.8"
			android:orientation="vertical"/>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
